fixed alignment for stack-layout

--- a/src/components/layout/stack-layout/stack-layout.scss
+++ b/src/components/layout/stack-layout/stack-layout.scss
@@ -4,5 +4,5 @@
 
   gap: var(--space);
   justify-content: var(--justify-content);
-  align-items: var(--align-content);
+  align-items: var(--align-items);
 }
